// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`caretColor renders 0 1`] = `
Array [
  .c0 {
  caret-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders function 1`] = `
Array [
  .c0 {
  caret-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders invalid theme path 1`] = `
Array [
  .c0 {
  caret-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders negative number 1`] = `
Array [
  .c0 {
  caret-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  caret-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  caret-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  caret-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    caret-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    caret-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    caret-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    caret-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    caret-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  caret-color: July;
}

@media May {
  .c0 {
    caret-color: August;
  }
}

@media April {
  .c0 {
    caret-color: September;
  }
}

@media January {
  .c0 {
    caret-color: November;
  }
}

@media April {
  .c0 {
    caret-color: August;
  }
}

@media June {
  .c0 {
    caret-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  caret-color: July;
}

@media May {
  .c0 {
    caret-color: August;
  }
}

@media April {
  .c0 {
    caret-color: September;
  }
}

@media January {
  .c0 {
    caret-color: November;
  }
}

@media April {
  .c0 {
    caret-color: August;
  }
}

@media June {
  .c0 {
    caret-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  caret-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret-color: November;
  }
}

@media April {
  .c0 {
    caret-color: January;
  }
}

@media January {
  .c0 {
    caret-color: December;
  }
}

@media April {
  .c0 {
    caret-color: April;
  }
}

@media June {
  .c0 {
    caret-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret-color: November;
  }
}

@media April {
  .c0 {
    caret-color: January;
  }
}

@media January {
  .c0 {
    caret-color: December;
  }
}

@media April {
  .c0 {
    caret-color: April;
  }
}

@media June {
  .c0 {
    caret-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    caret-color: July;
  }
}

@media April {
  .c0 {
    caret-color: August;
  }
}

@media January {
  .c0 {
    caret-color: September;
  }
}

@media April {
  .c0 {
    caret-color: November;
  }
}

@media June {
  .c0 {
    caret-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    caret-color: July;
  }
}

@media April {
  .c0 {
    caret-color: August;
  }
}

@media January {
  .c0 {
    caret-color: September;
  }
}

@media April {
  .c0 {
    caret-color: November;
  }
}

@media June {
  .c0 {
    caret-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret-color: January;
  }
}

@media April {
  .c0 {
    caret-color: December;
  }
}

@media January {
  .c0 {
    caret-color: April;
  }
}

@media April {
  .c0 {
    caret-color: May;
  }
}

@media June {
  .c0 {
    caret-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    caret-color: January;
  }
}

@media April {
  .c0 {
    caret-color: December;
  }
}

@media January {
  .c0 {
    caret-color: April;
  }
}

@media April {
  .c0 {
    caret-color: May;
  }
}

@media June {
  .c0 {
    caret-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders postitive number 1`] = `
Array [
  .c0 {
  caret-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders string 1`] = `
Array [
  .c0 {
  caret-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`caretColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`caretColor renders valid theme path 1`] = `
Array [
  .c0 {
  caret-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  caret-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
